test/types/range/elliot/badRangeLiterals/badHighBoundedRange.good
badHighBoundedRange.chpl:3: error: Bound of '..high' must be an integer.
